# top_tagging

./: .gitignore  README.md  bnn_preprocessing.ipynb  images.ipynb  pyproject.toml  sample.ipynb
notebooks/: infer_with_bnn.ipynb  infer_with_particlenet.ipynb  infer_with_resnet.ipynb
src/: preprocess.py  utils.py
src/bnn/: dataset.py  evaluate.py  evaluate.py.py  model.py  preprocess.py  train.py
src/particle_net/: dataset.py  model.py  train.py
src/resnet50/: dataset.py  evaluate.py  model.py  preprocess.py  train.py
